--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title></title>
+    <title>CUDA</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
 
-    <script type="text/javascript" src="script.js"></script>
-  </body>
+<body>
+<header>
+  <nav id="navbar1" class="navbar navbar-light">
+    <a class="navbar-brand" href="#">
+      <img src="Cuda Single Page Portfolio.jpg" width="150" height="100" alt="">
+    </a>
+    <ul class="nav justify-content-end">
+    <li class="nav-item">
+      <a id="home" class="nav-link active border-0 text-white" href="#">HOME</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-white" href="#">ABOUT</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-white" href="#">WORK</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-white" href="#">BLOG</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-white" href="#">CONTACT</a>
+    </li>
+    </ul>
+  </nav>
+  <blockquote class="blockquote text-center text-light">
+  <p id="paragrafo1" class="mb-0 display-4">Hi there!We are the new kids on the block<br>
+  and we build awesome websites and mobile apps.</p>
+</blockquote>
+  <div align="center">
+<button id="button1" style="width:200px" type="button" class="btn btn-primary btn-lg">work with us!</button>
+  </div>
+</header>
+  <script type="text/javascript" src="script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</body>
+
 </html>
