--- a/index.html
+++ b/index.html
@@ -3,10 +3,54 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
+
+    <div id="portfolio">
+      <div class="container">
+
+        <div class="row d-flex justify-content-center pt-4"><h1>OUR PORTFOLIO</h1></div>
+        <hr class="m4-2 lisere">
+        <div class="row d-flex justify-content-center"><p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua.</p></div>
+        <div class="row d-flex justify-content-center p-4"><button type="button" class="btn btn-light m-2 btn-category">All</button><button type="button" class="btn btn-dark m-2 btn-category">All</button><button type="button" class="btn btn-dark m-2 btn-category">All</button><button type="button" class="btn btn-dark m-2 btn-category">All</button></div>
+
+        <div class="row">
+          <div class="col mosaique">
+            <img src="img/p1.png" alt="">
+            <p class="uppercase">isometric perspective mock-up</p>
+          </div>
+          <div class="col mosaique">
+            <img src="img/p2.png" alt="">
+            <p class="uppercase">isometric perspective mock-up</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col mosaique">
+            <img src="img/p3.png" alt="">
+            <p class="uppercase">isometric perspective mock-up</p>
+          </div>
+          <div class="col mosaique">
+            <img src="img/p4.png" alt="">
+            <p class="uppercase">isometric perspective mock-up</p>
+          </div>
+        </div>
+        <div class="row d-flex justify-content-center"><button type="button" class="btn btn-more">Load more projects</button></div>
+      </div>
+    </div>
+
+    <div id="people" class="row"></div>
+
+    <div id="touch" class="row"></div>
+
+    <footer id="social" class="row"></footer>
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
