--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+                  <!-- ismail paragraph 1+++ -->
+
+                  <!-- PARAGRAPH 1 ismail START -->
+
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
@@ -16,7 +20,7 @@
     </a>
     <ul class="nav justify-content-end">
     <li class="nav-item">
-      <a id="home" class="nav-link active border-0 text-white" href="#">HOME</a>
+      <a id="home" class="nav-link text-white" href="#">HOME</a>
     </li>
     <li class="nav-item">
       <a class="nav-link text-white" href="#">ABOUT</a>
@@ -37,12 +41,170 @@
   and we build awesome websites and mobile apps.</p>
 </blockquote>
   <div align="center">
-<button id="button1" style="width:200px" type="button" class="btn btn-primary btn-lg">work with us!</button>
+<button id="button1" style="width:200px" type="button" class="btn btn-more">work with us!</button>
   </div>
 </header>
 
+                           <!-- PARAGRAPH 2 ismail START -->
+
+<article id="paragraph2">
+  <div class="row d-flex justify-content-center pt-4 text-light"><h1 id="titoloP2">services we provide</h1></div>
+  <hr class="m4-2 lisere">
+  <div class="row d-flex justify-content-center"><p id="descrizioneP2" class="text-center text-light">we are working with both individuals and businesses from all over the globe<br>to create awesome websites and applications.</p></div>
+
+  <!-- Paragraph2 ismail cards -->
+
+  <div class="container">
+  <div id="card2" class="card-deck" style="width: 70rem">
+  <div class="card bg-transparent border-0">
+    <img src="img/redflag.png" class="card-img-top bg-transparent border-0" alt="...">
+    <div class="card-body">
+      <h5 class="card-title text-center text-light">Branding</h5>
+      <p class="card-text text-center text-light">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+  </div>
+  <div class="card bg-transparent border-0">
+    <img src="img/pencil.png" class="card-img-top bg-transparent border-0" alt="...">
+    <div class="card-body">
+      <h5 class="card-title text-center text-light">Design</h5>
+      <p class="card-text text-center text-light">This card has supporting text below as a natural lead-in to additional content.</p>
+    </div>
+  </div>
+  <div class="card bg-transparent border-0">
+    <img src="img/worker.png" class="card-img-top bg-transparent border-0" alt="...">
+    <div class="card-body">
+      <h5 class="card-title text-center text-light">Development</h5>
+      <p class="card-text text-center text-light">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    </div>
+  </div>
+  <div class="card bg-transparent border-0">
+    <img src="img/rocket.png" class="card-img-top bg-transparent border-0" alt="...">
+    <div class="card-body">
+      <h5 class="card-title text-center text-light">Rocket science</h5>
+      <p class="card-text text-center text-light">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    </div>
+  </div>
+</div>
+</div>
+</article>
+                          <!-- PARAGRAPH 2 ismail END-->
+
+                          <!-- PARAGRAPH 3 ismail START-->
+  <article id="paragraph3">
+    <div class="row d-flex justify-content-center pt-4 text-black"><h1 id="titoloP3">Meet our beautiful team</h1></div>
+    <hr class="m4-2 lisere">
+    <div class="row d-flex justify-content-center"><p id="descrizioneP3" class="text-center text-black">We are a small team of designers and developers, who help brands with big ideas.</p></div>
+
+  <!-- Paragraph3 ismail cards -->
+
+  <div class="container">
+    <div id="card2" class="card-deck" style="width: 70rem">
+      <div class="card bg-transparent border-0">
+        <img src="img/snapchat.png" class="card-img-top bg-transparent border-0" alt="...">
+        <div class="card-body">
+          <h5 class="card-title text-center text-black">Anne Hathaway</h5>
+          <p class="job" class="card-title text-center text-light">CEO / Marketing guru</p>
+          <p class="card-text text-center text-black">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </div>
+      <div class="card bg-transparent border-0">
+        <img src="img/snapchat.png" class="card-img-top bg-transparent border-0" alt="...">
+        <div class="card-body">
+          <h5 class="card-title text-center text-black">Kate Upton</h5>
+          <p class="job" class="card-title text-center text-light">Creative director</p>
+          <p class="card-text text-center text-black">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+      </div>
+      <div class="card bg-transparent border-0">
+        <img src="img/snapchat.png" class="card-img-top bg-transparent border-0" alt="...">
+        <div class="card-body">
+          <h5 class="card-title text-center text-black">Olivia Wilde</h5>
+          <p class="job" class="card-title text-center text-light">Lead designer</p>
+          <p class="card-text text-center text-black">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+      </div>
+      <div class="card bg-transparent border-0">
+        <img src="img/snapchat.png" class="card-img-top bg-transparent border-0" alt="...">
+        <div class="card-body">
+          <h5 class="card-title text-center text-black">Ashley Greene</h5>
+          <p class="job" class="card-title text-center text-light">SEO / Developer</p>
+          <p class="card-text text-center text-black">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</article>
 
 
+                            <!-- PARAGRAPH 3 ismail END-->
+                            <!-- PARAGRAPH 4 ismail START-->
+
+<article id="paragraph4">
+  <div class="row d-flex justify-content-center pt-4 text-black"><h1 id="titoloP3">We got skills!</h1></div>
+  <hr class="m4-2 lisere">
+  <div class="row d-flex justify-content-center"><p id="descrizioneP3" class="text-center text-black">We are a small team of designers and developers, who help brands with big ideas.</p></div>
+
+                            <!-- progress circle paragraph 4 ismail -->
+
+    <div class="container">
+    <div class="row">
+        <div class="col-md-3 col-sm-6">
+            <div class="progress blue">
+                <span class="progress-left">
+                    <span class="progress-bar"></span>
+                </span>
+                <span class="progress-right">
+                    <span class="progress-bar"></span>
+                </span>
+                <div class="progress-value">90%</div>
+            </div>
+            <h3 class="text-center">web design</h3>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="progress pink">
+                <span class="progress-left">
+                    <span class="progress-bar"></span>
+                </span>
+                <span class="progress-right">
+                    <span class="progress-bar"></span>
+                </span>
+                <div class="progress-value">75%</div>
+            </div>
+            <h3 class="text-center">html / css</h3>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="progress green">
+                <span class="progress-left">
+                    <span class="progress-bar"></span>
+                </span>
+                <span class="progress-right">
+                    <span class="progress-bar"></span>
+                </span>
+                <div class="progress-value">70%</div>
+            </div>
+            <h3 class="text-center">graphic design</h3>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="progress yellow">
+                <span class="progress-left">
+                    <span class="progress-bar"></span>
+                </span>
+                <span class="progress-right">
+                    <span class="progress-bar"></span>
+                </span>
+                <div class="progress-value">85%</div>
+            </div>
+            <h3 class="text-center">ui / ux</h3>
+        </div>
+    </div>
+</div>
+</article>
+
+
+
+
+
+                            <!-- Sylvain paragraph 5+++ -->
 
   <div id="portfolio">
     <div class="container">
