P optimized+p5 retouch+more png images

--- a/index.html
+++ b/index.html
@@ -104,7 +104,13 @@
         <div class="card-body">
           <h5 class="card-title text-center text-black">Anne Hathaway</h5>
           <p class="job" class="card-title text-center text-light">CEO / Marketing guru</p>
-          <p class="card-text text-center text-black">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text text-center text-black">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <div id="anne" class="container">
+            <a href="https://fr.wikipedia.org/wiki/Anne_Hathaway"><img src="img/wiki.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Anne_Hathaway"><img src="img/wiki1.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Anne_Hathaway"><img src="img/wiki2.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Anne_Hathaway"><img src="img/wiki3.png" width="30" height="30" alt=""></a>
+          </div>
         </div>
       </div>
       <div class="card bg-transparent border-0">
@@ -112,7 +118,12 @@
         <div class="card-body">
           <h5 class="card-title text-center text-black">Kate Upton</h5>
           <p class="job" class="card-title text-center text-light">Creative director</p>
-          <p class="card-text text-center text-black">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text text-center text-black">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <div id="kate" class="container">
+            <a href="https://fr.wikipedia.org/wiki/Kate_Upton"><img src="img/wiki.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Kate_Upton"><img src="img/wiki1.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Kate_Upton"><img src="img/wiki2.png" width="30" height="30" alt=""></a>
+          </div>
         </div>
       </div>
       <div class="card bg-transparent border-0">
@@ -121,6 +132,12 @@
           <h5 class="card-title text-center text-black">Olivia Wilde</h5>
           <p class="job" class="card-title text-center text-light">Lead designer</p>
           <p class="card-text text-center text-black">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <div id="anne" class="container">
+            <a href="https://fr.wikipedia.org/wiki/Olivia_Wilde"><img src="img/wiki.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Olivia_Wilde"><img src="img/wiki1.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Olivia_Wilde"><img src="img/wiki2.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Olivia_Wilde"><img src="img/wiki3.png" width="30" height="30" alt=""></a>
+          </div>
         </div>
       </div>
       <div class="card bg-transparent border-0">
@@ -129,6 +146,11 @@
           <h5 class="card-title text-center text-black">Ashley Greene</h5>
           <p class="job" class="card-title text-center text-light">SEO / Developer</p>
           <p class="card-text text-center text-black">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <div id="kate" class="container">
+            <a href="https://fr.wikipedia.org/wiki/Ashley_Greene"><img src="img/wiki.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Ashley_Greene"><img src="img/wiki1.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Ashley_Greene"><img src="img/wiki2.png" width="30" height="30" alt=""></a>
+          </div>
         </div>
       </div>
     </div>
@@ -216,21 +238,21 @@
 
       <div class="row">
         <div class="col mosaique">
-          <img src="img/p1.png" alt="">
+          <img class="pc" src="img/p1.png" alt="">
           <p class="uppercase">isometric perspective mock-up</p>
         </div>
         <div class="col mosaique">
-          <img src="img/p2.png" alt="">
+          <img class="pc" src="img/p2.png" alt="">
           <p class="uppercase">isometric perspective mock-up</p>
         </div>
       </div>
       <div class="row">
         <div class="col mosaique">
-          <img src="img/p3.png" alt="">
+          <img class="pc" src="img/p3.png" alt="">
           <p class="uppercase">isometric perspective mock-up</p>
         </div>
         <div class="col mosaique">
-          <img src="img/p4.png" alt="">
+          <img class="pc" src="img/p4.png" alt="">
           <p class="uppercase">isometric perspective mock-up</p>
         </div>
       </div>
