social icons+correct(%)

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
           <p class="job" class="card-title text-center text-light">CEO / Marketing guru</p>
           <p class="card-text text-center text-black">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
           <div id="anne" class="container">
-            <a href="https://fr.wikipedia.org/wiki/Anne_Hathaway"><img src="img/wiki.png" width="30" height="30" alt=""></a>
-            <a href="https://fr.wikipedia.org/wiki/Anne_Hathaway"><img src="img/wiki1.png" width="30" height="30" alt=""></a>
-            <a href="https://fr.wikipedia.org/wiki/Anne_Hathaway"><img src="img/wiki2.png" width="30" height="30" alt=""></a>
-            <a href="https://fr.wikipedia.org/wiki/Anne_Hathaway"><img src="img/wiki3.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Anne_Hathaway"><img class="socialicon" src="img/facebook.svg" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Anne_Hathaway"><img class="socialicon" src="img/twitter.svg" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Anne_Hathaway"><img class="socialicon" src="img/linkedin.svg" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Anne_Hathaway"><img class="socialicon" src="img/mail.svg" width="30" height="30" alt=""></a>
           </div>
         </div>
       </div>
@@ -120,9 +120,9 @@
           <p class="job" class="card-title text-center text-light">Creative director</p>
           <p class="card-text text-center text-black">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
           <div id="kate" class="container">
-            <a href="https://fr.wikipedia.org/wiki/Kate_Upton"><img src="img/wiki.png" width="30" height="30" alt=""></a>
-            <a href="https://fr.wikipedia.org/wiki/Kate_Upton"><img src="img/wiki1.png" width="30" height="30" alt=""></a>
-            <a href="https://fr.wikipedia.org/wiki/Kate_Upton"><img src="img/wiki2.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Kate_Upton"><img class="socialicon" src="img/twitter.svg" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Kate_Upton"><img class="socialicon" src="img/linkedin.svg" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Kate_Upton"><img class="socialicon" src="img/mail.svg" width="30" height="30" alt=""></a>
           </div>
         </div>
       </div>
@@ -133,10 +133,10 @@
           <p class="job" class="card-title text-center text-light">Lead designer</p>
           <p class="card-text text-center text-black">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
           <div id="anne" class="container">
-            <a href="https://fr.wikipedia.org/wiki/Olivia_Wilde"><img src="img/wiki.png" width="30" height="30" alt=""></a>
-            <a href="https://fr.wikipedia.org/wiki/Olivia_Wilde"><img src="img/wiki1.png" width="30" height="30" alt=""></a>
-            <a href="https://fr.wikipedia.org/wiki/Olivia_Wilde"><img src="img/wiki2.png" width="30" height="30" alt=""></a>
-            <a href="https://fr.wikipedia.org/wiki/Olivia_Wilde"><img src="img/wiki3.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Olivia_Wilde"><img class="socialicon" src="img/facebook.svg" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Olivia_Wilde"><img class="socialicon" src="img/twitter.svg" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Olivia_Wilde"><img class="socialicon" src="img/linkedin.svg" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Olivia_Wilde"><img class="socialicon" src="img/mail.svg" width="30" height="30" alt=""></a>
           </div>
         </div>
       </div>
@@ -147,9 +147,9 @@
           <p class="job" class="card-title text-center text-light">SEO / Developer</p>
           <p class="card-text text-center text-black">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
           <div id="kate" class="container">
-            <a href="https://fr.wikipedia.org/wiki/Ashley_Greene"><img src="img/wiki.png" width="30" height="30" alt=""></a>
-            <a href="https://fr.wikipedia.org/wiki/Ashley_Greene"><img src="img/wiki1.png" width="30" height="30" alt=""></a>
-            <a href="https://fr.wikipedia.org/wiki/Ashley_Greene"><img src="img/wiki2.png" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Ashley_Greene"><img class="socialicon" src="img/facebook.svg" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Ashley_Greene"><img class="socialicon" src="img/linkedin.svg" width="30" height="30" alt=""></a>
+            <a href="https://fr.wikipedia.org/wiki/Ashley_Greene"><img class="socialicon" src="img/mail.svg" width="30" height="30" alt=""></a>
           </div>
         </div>
       </div>
