--- a/index.html
+++ b/index.html
@@ -1,90 +1,197 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
-    <meta charset="utf-8">
-    <title>CUDA</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+  <meta charset="utf-8">
+  <title>CUDA</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
-<header class="py-5">
-  <nav id="navbar1" class="navbar navbar-light">
-    <a class="navbar-brand" href="#">
-      <img src="img/logo.jpg" width="150" height="100" alt="">
-    </a>
-    <ul class="nav justify-content-end">
-    <li class="nav-item">
-      <a id="home" class="nav-link active border-0 text-white" href="#">HOME</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-white" href="#">ABOUT</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-white" href="#">WORK</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-white" href="#">BLOG</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-white" href="#">CONTACT</a>
-    </li>
-    </ul>
-  </nav>
-  <blockquote class="blockquote text-center text-light">
-  <p id="paragrafo1" class="mb-0 display-4">Hi there!We are the new kids on the block<br>
-  and we build awesome websites and mobile apps.</p>
-</blockquote>
-  <div align="center">
-<button id="button1" style="width:200px" type="button" class="btn btn-primary btn-lg">work with us!</button>
-  </div>
-</header>
+
+  <body>
+    <header class="py-5">
+      <nav id="navbar1" class="navbar navbar-light">
+        <a class="navbar-brand" href="#">
+          <img src="img/logo.jpg" width="150" height="100" alt="">
+        </a>
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a id="home" class="nav-link active border-0 text-white" href="#">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">ABOUT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">WORK</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">BLOG</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">CONTACT</a>
+          </li>
+        </ul>
+      </nav>
+      <blockquote class="blockquote text-center text-light">
+        <p id="paragrafo1" class="mb-0 display-4">Hi there!We are the new kids on the block<br>
+          and we build awesome websites and mobile apps.</p>
+      </blockquote>
+      <div align="center">
+        <button id="button1" style="width:200px" type="button" class="btn btn-primary btn-lg">work with us!</button>
+      </div>
+    </header>
+
+
+
+    <div id="portfolio">
+      <div class="container">
+
+        <div class="row d-flex justify-content-center pt-4">
+          <h1 class="text-black">OUR PORTFOLIO</h1>
+        </div>
+        <hr class="m4-2 lisere">
+        <div class="row d-flex justify-content-center">
+          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="row d-flex justify-content-center p-4"><button type="button" class="btn btn-light m-2 btn-category">All</button><button type="button" class="btn btn-dark m-2 btn-category">All</button><button type="button"
+            class="btn btn-dark m-2 btn-category">All</button><button type="button" class="btn btn-dark m-2 btn-category">All</button></div>
+
+        <div class="row">
+          <div class="col mosaique">
+            <img src="img/p1.png" alt="">
+            <p class="uppercase">isometric perspective mock-up</p>
+          </div>
+          <div class="col mosaique">
+            <img src="img/p2.png" alt="">
+            <p class="uppercase">isometric perspective mock-up</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col mosaique">
+            <img src="img/p3.png" alt="">
+            <p class="uppercase">isometric perspective mock-up</p>
+          </div>
+          <div class="col mosaique">
+            <img src="img/p4.png" alt="">
+            <p class="uppercase">isometric perspective mock-up</p>
+          </div>
+        </div>
+        <div class="row d-flex justify-content-center"><button type="button" class="btn btn-more">Load more projects</button></div>
+      </div>
+    </div>
+
+    <div id="people">
+      <div class="container">
+
+      <div class="row d-flex justify-content-center pt-4">
+        <h1 class="text-white">WHAT PEOPLE SAY ABOUT US</h1>
+      </div>
+        <hr class="m4-2 lisere">
+      <div class="row d-flex justify-content-center">
+        <p class="text-center text-white">Our client love us!</p>
+      </div>
+      <br>
+          <div class="row text-white">
+            <div class="col-md-1">
+              <img src="img/circle.png" alt="">
+            </div>
+            <div class="col-md-5">
+                        <p><small>“Sed ut perspiciatis unde omnis<br> iste natus error sit voluptatem accusantium<br> doloremque laudantium, totam rem "</small></br></p>
+                        <p><b>Chanel IMAN</b><br>
+                      <i class="text-warning">CEO of Pinterest</i></p>
+              </div>
+            <div class="col-md-1">
+              <img class="pull-left" src="img/circle.png" alt="">
+            </div>
+            <div class="col-md-5">
+              <p><small>"magni dolores eos qui ratione voluptatem<br> sequi nesciunt. Neque porro quisquam est,<br> qui dolorem ipsum quia dolor sit amet"</small><br></p>
+              <p><b>Adriana LIMA</b><br>
+            <i class="text-warning">Founder of Instagram</i></p>
+            </div>
+
+            <!-- Force next columns to break to new line -->
+            <div class="w-100"></div>
+
+            <div class="col-md-1">
+              <img src="img/circle.png" alt="">
+            </div>
+            <div class="col-md-5">
+              <p><small>"Ut enim ad minima veniam,<br>quis nostrum exercitationem<br> ullam corporis suscipit"</small><br></p>
+              <p><b>Anne Hathaway</b><br>
+            <i class="text-warning">Lead Designer at Behance</i></p>
+            </div>
+            <div class="col-md-1">
+              <img src="img/circle.png" alt="">
+            </div>
+            <div class="col-md-5">
+              <p><small>"Quis autem vel eum iure reprehenderit<br> qui in ea voluptate velit esse quam nihil<br> molestiae consequatur"</small><br></P>
+              <p><b>Emma Stone</b><br>
+            <i class="text-warning">Co-founder of Shazam</i></p>
+            <br>
+            </div>
+          </div>
+        </div>
+        </div>
 
 
 
 
-  <div id="portfolio">
+
+
+    <div id="touch">
     <div class="container">
 
-      <div class="row d-flex justify-content-center pt-4"><h1>OUR PORTFOLIO</h1></div>
+      <div class="row d-flex justify-content-center pt-4">
+        <h1 class="text-white">GET IN TOUCH</h1>
+      </div>
       <hr class="m4-2 lisere">
-      <div class="row d-flex justify-content-center"><p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua.</p></div>
-      <div class="row d-flex justify-content-center p-4"><button type="button" class="btn btn-light m-2 btn-category">All</button><button type="button" class="btn btn-dark m-2 btn-category">All</button><button type="button" class="btn btn-dark m-2 btn-category">All</button><button type="button" class="btn btn-dark m-2 btn-category">All</button></div>
+      <div class="row d-flex justify-content-center">
+        <p class="text-center text-white">1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111<p/>
+      </div>
+      <form>
+<div class="form-row">
+  <div class="col">
+    <input type="text" class="form-control" placeholder="Your Name"style="background-color:#273a71;color:white;">
+  </div>
+  <div class="col">
+    <input type="text" class="form-control " placeholder="Your Email" style="background-color:#273a71;color:white;">
+  </div>
+</div>
+<br>
+<form>
+<textarea name="myTextBox" cols="136" rows="5" style="background-color:#273a71;color:#fff;">
+Your message
+</textarea>
+<br>
+<br>
+<div class="row d-flex justify-content-center"><button type="button" class="btn btn-more">send message</button></div>
 
-      <div class="row">
-        <div class="col mosaique">
-          <img src="img/p1.png" alt="">
-          <p class="uppercase">isometric perspective mock-up</p>
-        </div>
-        <div class="col mosaique">
-          <img src="img/p2.png" alt="">
-          <p class="uppercase">isometric perspective mock-up</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col mosaique">
-          <img src="img/p3.png" alt="">
-          <p class="uppercase">isometric perspective mock-up</p>
-        </div>
-        <div class="col mosaique">
-          <img src="img/p4.png" alt="">
-          <p class="uppercase">isometric perspective mock-up</p>
-        </div>
-      </div>
-      <div class="row d-flex justify-content-center"><button type="button" class="btn btn-more">Load more projects</button></div>
-    </div>
+</div>
+</div>
+
+<footer id="social">
+  <div class="container">
+    <ul style="list-style-type: none">
+          <div class="row pt-4">
+        <li><a href="#" style="color:#fff">Facebook </a></li>
+        <li><a href="#" style="color:#fff">Google+</a></li>
+        <li><a href="#" style="color:#fff">Twitter</a></li>
+        <li><a href="#" style="color:#fff">Linkedin</a></li>
+        <li><a href="#" style="color:#fff">Behance</a></li>
+        <li><a href="#" style="color:#fff">Dribbble</a></li>
+        <li><a href="#" style="color:#fff">GitHub</a></li>
+          </div>
+      </ul>
   </div>
 
-  <div id="people" class="row"></div>
+ </footer>
 
-  <div id="touch" class="row"></div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="script.js"></script>
+  </body>
 
-  <footer id="social" class="row"></footer>
-
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="script.js"></script>
-</body>
 </html>
