--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 <body>
 <header class="py-5">
   <nav id="navbar1" class="navbar navbar-light">
-    <a class="navbar-brand" href="#">
-      <img src="img/logo.jpg" width="150" height="100" alt="">
-    </a>
+    <a class="navbar-brand" href="#"><img src="img/logo.jpg" width="150" height="100" alt=""></a>
     <ul class="nav justify-content-end">
     <li class="nav-item">
       <a id="home" class="nav-link text-white" href="#">HOME</a>
