P size+line color

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         </div>
         <hr class="m4-2 lisere">
         <div class="row d-flex justify-content-center">
-          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua.</p>
+          <p class="textP5" class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua.</p>
         </div>
         <div class="row d-flex justify-content-center p-4"><button type="button" class="btn btn-light m-2 btn-category">All</button><button type="button" class="btn btn-dark m-2 btn-category">All</button><button type="button"
             class="btn btn-dark m-2 btn-category">All</button><button type="button" class="btn btn-dark m-2 btn-category">All</button></div>
@@ -265,7 +265,7 @@
         </div>
         <hr class="m4-2 lisere">
         <div class="row d-flex justify-content-center">
-          <p class="text-center text-white">Our client love us!</p>
+          <p class="textP6" class="text-center text-white">Our client love us!</p>
         </div>
         <br>
         <div class="row text-white">
@@ -318,7 +318,7 @@
         </div>
         <hr class="m4-2 lisere">
         <div class="row d-flex justify-content-center">
-          <p class="text-center text-white">1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111
+          <p class="textP7" class="text-center text-white">1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111
             <p />
         </div>
         <form>
